--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,21 @@
 ---
-title: "Project Overview"
+title: "Ecosystem Monitoring & Management Application (EMMA)"
+subtitle: "Measuring change in a changing world"
+title-block-banner: img/banner.jpeg
+title-block-banner-color: "#FFFFFF"
 ---
 
-
 # Summary
+
 The EMMA project is building new tools to monitor the health of shrubland ecosystems in near real-time. Focusing on the fire-prone Cape Floristic Region of South Africa—a biodiversity hotspot—our system combines satellite data, field observations, and modeling to track changes in vegetation, identify threats like fires or invasive species, and support better conservation decisions. In partnership with the South African Environmental Observation Network (SAEON), EMMA aims to provide reliable, up-to-date information that helps protect these critical landscapes.
+
+# Cape Floristic Region
+
+The EMMA project focuses on the Cape Floristic Region of South Africa — one of the most biologically diverse and ecologically important areas on Earth. Despite covering less than 0.5% of Africa’s land area, this region holds over 20% of the continent’s plant species, many of which are found nowhere else.
+
+This unique shrubland ecosystem, known locally as fynbos, is shaped by fire, climate, and human activity. It is a UNESCO World Heritage Site and a Global Biodiversity Hotspot, but faces growing threats from climate change, land use change, and invasive species.
+
+By combining Earth observations with ecological models, EMMA supports real-time monitoring and decision-making to help protect and manage this remarkable landscape.
 
 ```{r, echo=F, message=F,include=F, results="hide", eval=T}
 #description: Modeling vegetation postfire recovery data
@@ -23,73 +34,25 @@ library(forcats)
 tar_load(protected_areas)
 tar_load(park_fire_history)
 tar_load(temp_directory)
-tar_load(years_since_fire_raster)
+tar_load(years_since_fire.tif)
 tar_load(fires_wgs)
-tar_load(most_recent_ndvi_raster)
+tar_load(most_recent_ndvi.tif)
 tar_load(most_recent_ndvi_date)
-tar_load(monthly_mean_ndvi_raster)
-tar_load(monthly_delta_ndvi_raster)
+tar_load(monthly_mean_ndvi.tif)
+tar_load(monthly_delta_ndvi.tif)
 tar_load(weather_data)
 tar_load(report_qmd_dir) # forces park qmds to run first
   
 ```
 
-
-# Regional Overview
-
-```{r, echo=F, warning=F}
-protected_areas_monthly_delta_ndvi <- extract(monthly_delta_ndvi_raster,protected_areas,fun=quantile,na.rm=T) |> 
-  as_tibble() |> 
-  select(-1) |> #drop the index
-  rename("Q0"="NDVI","Q25"="NDVI.1","Q50"="NDVI.2","Q75"="NDVI.3","Q100"="NDVI.4") |> 
-  bind_cols(name=protected_areas$name)
-
-```
-
-```{r, echo=F, warning=F}
-protected_areas_monthly_delta_ndvi |> 
-  #gather(quantile,value,-name) |> 
-  ggplot(aes(xmin=Q25,xmax=Q75,x=Q50,y=name))+
-    geom_errorbarh()
-
-```
-
-```{r, echo=F, warning=F}
-years_since_fire <- extract(years_since_fire_raster,protected_areas,fun=quantile,na.rm=T) |> 
-  as_tibble() |> 
-  select(-1) |> #drop the index
-  rename("Q0"="lyr.1","Q25"="lyr.1.1","Q50"="lyr.1.2","Q75"="lyr.1.3","Q100"="lyr.1.4") |> 
-  bind_cols(name=protected_areas$name)
-
-```
-# Stand Age distributions
-```{r, echo=F}
-years_since_fire |> 
-  filter(!is.na(Q50)) |> 
-  mutate(name = fct_reorder(as.factor(name), Q50)) |> 
-  ggplot(aes(y = name)) +
-    # Full range (min to max)
-    geom_segment(aes(x = Q0, xend = Q100, yend = name), color = "grey70", linewidth = .5) +
-    # Interquartile range (Q25 to Q75)
-    geom_segment(aes(x = Q25, xend = Q75, yend = name), color = "grey40", linewidth = 1) +
-    # Median point
-    geom_point(aes(x = Q50), size = 2, color = "black") +
-    labs(
-      x = "Years Since Fire",
-      y = NULL,
-      title = "Distribution of Time Since Fire by Site",
-      subtitle = "Showing full range (Q0–Q100), IQR (Q25–Q75), and median (Q50)"
-    ) 
-
-```
-
+# Park-level Summaries
 
 ```{r, echo=F}
   base_url <- "https://adamwilsonlab.github.io/emma_report/reports/"
   base_url <- "reports/" #keep relative paths?
   
     reports <- 
-  data.frame(report = list.files("reports/")) %>%
+  data.frame(report = list.files("reports/",pattern = "*.qmd")) %>%
     mutate(url = paste(base_url,gsub(pattern = ".qmd",replacement = ".html",x = report),sep = ""),
            park_name = gsub(pattern = "report.",replacement = "",x = report),
            park_name = gsub(pattern = ".html",replacement = "",x = park_name),
@@ -112,7 +75,6 @@ years_since_fire |>
 
 
 ```
-# Park-level Summaries
 
 Click on a park below to view park specific reports.
 
@@ -132,6 +94,72 @@ Click on a park below to view park specific reports.
     baseGroups = c("NatGeo","World Imagery"),
     options = layersControlOptions(collapsed = FALSE),position = "topright") %>%
   fitBounds(bbox[1], bbox[2], bbox[3], bbox[4])
+
+```
+
+# Regional Overview
+
+```{r, echo=F, warning=F}
+
+protected_areas_monthly_delta_ndvi <- extract(monthly_delta_ndvi.tif,protected_areas,fun=quantile,na.rm=T) |> 
+  as_tibble() |> 
+  select(-1) |> #drop the index
+  rename("Q0"="NDVI","Q25"="NDVI.1","Q50"="NDVI.2","Q75"="NDVI.3","Q100"="NDVI.4") |> 
+  bind_cols(name=protected_areas$name)
+
+```
+
+```{r, echo=F, warning=F,fig.cap="Median value of the spatial vegetation anomalies of the past month compared to the mean values of the same month in prior years.  High values indicate higher than normal vegetation biomass while low values represent less vegetation than typical for this region. Parks are ordered from low to high. Click on the park in the map to see more detailed information."}
+
+protected_areas_monthly_delta_ndvi |> 
+  filter(!is.na(Q50)) |> 
+  mutate(name = fct_reorder(as.factor(name), Q50)) |> 
+  ggplot(aes(y = name)) +
+    # Full range (min to max)
+    geom_segment(aes(x = Q0, xend = Q100, yend = name), color = "grey70", linewidth = .5) +
+    # Interquartile range (Q25 to Q75)
+    geom_segment(aes(x = Q25, xend = Q75, yend = name), color = "grey40", linewidth = 1) +
+    # Median point
+    geom_point(aes(x = Q50), size = 2, color = "black") +
+    labs(
+      x = "Mean Vegetation Anomaly (NDVI)",
+      y = "Protected Area",
+      title = "Distribution of Vegetation Anomalies",
+      subtitle = "Showing full range (Q0–Q100), IQR (Q25–Q75), and median (Q50)"
+    ) 
+
+
+```
+
+
+# Stand Age distributions
+
+```{r, echo=F, warning=F}
+years_since_fire <- extract(years_since_fire.tif,protected_areas,fun=quantile,na.rm=T) |> 
+  as_tibble() |> 
+  select(-1) |> #drop the index
+  rename("Q0"="lyr.1","Q25"="lyr.1.1","Q50"="lyr.1.2","Q75"="lyr.1.3","Q100"="lyr.1.4") |> 
+  bind_cols(name=protected_areas$name)
+
+```
+
+```{r, echo=F}
+years_since_fire |> 
+  filter(!is.na(Q50)) |> 
+  mutate(name = fct_reorder(as.factor(name), Q50)) |> 
+  ggplot(aes(y = name)) +
+    # Full range (min to max)
+    geom_segment(aes(x = Q0, xend = Q100, yend = name), color = "grey70", linewidth = .5) +
+    # Interquartile range (Q25 to Q75)
+    geom_segment(aes(x = Q25, xend = Q75, yend = name), color = "grey40", linewidth = 1) +
+    # Median point
+    geom_point(aes(x = Q50), size = 2, color = "black") +
+    labs(
+      x = "Years Since Fire",
+      y = NULL,
+      title = "Distribution of Time Since Fire by Site",
+      subtitle = "Showing full range (Q0–Q100), IQR (Q25–Q75), and median (Q50)"
+    ) 
 
 ```
 
